fixed footer alignment

--- a/src/App.scss
+++ b/src/App.scss
@@ -121,6 +121,13 @@ footer {
   a {
     color: #f0c370;
   }
+  .other-pages {
+    display: flex;
+    justify-content: space-evenly;
+    margin: 12px 0 0 0;
+    flex-direction: column;
+    gap: 12px;
+  }
 }
 
 .footer {
@@ -129,7 +136,7 @@ footer {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 20px;
+  font-size: 18px;
   color: #52ff7d;
   padding: 0px 4px 8px 4px;
   font-style: italic;
@@ -169,6 +176,10 @@ footer {
 
   footer {
     text-align: center;
+
+    .other-pages {
+      flex-direction: row;
+    }
 
     .team {
       color: white;
