--- a/src/ViewCount/index.scss
+++ b/src/ViewCount/index.scss
@@ -1,7 +1,7 @@
 .view-count-container {
   color: #ffc027;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   gap: 4px;
   flex-wrap: wrap;
 
